syntax = "proto3";

package rbs;

option java_multiple_files = true;
option java_package = "com.example.rbs.proto";
option java_outer_classname = "OrchestratorProto";

service Orchestrator {
  rpc GetServer (GetServerRequest) returns (GetServerResponse) {}
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}

message GetServerRequest {
  string user_id = 1;
  string repo_hash = 2;
  string session_id = 3;
  string source_path = 4;
  repeated string startup_options = 5;
  string region = 6;
}

message GetServerResponse {
  string server_address = 1;
  string status = 2;
}

message HeartbeatRequest {
  string session_id = 1;
}

message HeartbeatResponse {}
